src/objects/Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Used to identify the name of the main company the competitor uses</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The main company name of the competitor</inlineHelpText>
        <label>Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Logo__c</fullName>
        <description>Include the competitor&apos;s brand logo here</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Competitor Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>The country in which this information is applicable. NOT the country of operation.</description>
        <inlineHelpText>The country in which this information is applicable. NOT the country of operation.</inlineHelpText>
        <label>Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_of_customers__c</fullName>
        <description>This field stores the estimated number of customers this competitor has</description>
        <inlineHelpText>How many customers does this competitor have?</inlineHelpText>
        <label># of customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Level_Sales_Strategy__c</fullName>
        <description>Used to detail the sales strategy when competing against this company</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Keep this in mind when competing against this company</inlineHelpText>
        <label>High Level Sales Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Our_Advantages__c</fullName>
        <description>This competitors Product or Service strengths</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This competitors product or service strengths</inlineHelpText>
        <label>Strengths</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Our_Weaknesses__c</fullName>
        <description>This competitors weaknesses</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This competitors weaknesses</inlineHelpText>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ownership_Structure__c</fullName>
        <description>Who owns the company? e.g. Subsidiary, public company</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Who owns the company? e.g. Subsidiary, public company</inlineHelpText>
        <label>Ownership Structure</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AU_Competitors</fullName>
        <columns>NAME</columns>
        <columns>Website__c</columns>
        <columns>Competitor_Products__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Competitor__c.AUCompetitor</value>
        </filters>
        <label>AU Competitors</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>AUCompetitor</fullName>
        <active>true</active>
        <description>Record used for AU Fuel, Trade &amp; WAA competitors</description>
        <label>AUCompetitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>WexEurope_Competitors</fullName>
        <active>true</active>
        <label>WexEurope Competitors</label>
    </recordTypes>
</CustomObject>